yamls/4-add-backend-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goserv2
  labels:
    app: goserv
    version: goserv2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: goserv
      version: goserv2
  template:
    metadata:
      labels:
        app: goserv
        version: goserv2
    spec:
      containers:
      - name: goserv2
        image: papudatta/istio-goserv2:3
        readinessProbe:
          httpGet:
            path: /healthz
            port: 9091
          initialDelaySeconds: 5
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /healthz
            port: 9091
          initialDelaySeconds: 5
          periodSeconds: 5
