yamls/1_verify.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python3-fe
  labels:
    type: flask
    service: pythonfe
spec:
  replicas: 3
  selector:
    matchLabels:
      type: flask
      service: pythonfe
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        type: flask
        service: pythonfe
    spec:
      containers:
      - name: flask
        image: papudatta/istio-landing:2
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8081
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8081
          initialDelaySeconds: 5
          periodSeconds: 10

---

apiVersion: v1
kind: Service
metadata:
  name: pythonfe
spec:
  type: LoadBalancer
  ports:
  - port: 8081
  selector:
    type: flask
    service: pythonfe

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: goserv1
  labels:
    type: golangv1
    service: goserv1
spec:
  replicas: 2
  selector:
    matchLabels:
      type: golangv1
      service: goserv1
  template:
    metadata:
      labels:
        type: golangv1
        service: goserv1
    spec:
      containers:
      - name: goserv1
        image: papudatta/istio-goserv1:1
        readinessProbe:
          httpGet:
            path: /healthz
            port: 9091
          initialDelaySeconds: 5
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /healthz
            port: 9091
          initialDelaySeconds: 5
          periodSeconds: 5

---

apiVersion: v1
kind: Service
metadata:
  name: goserv1
spec:
  ports:
  - port: 9091
  selector:
    type: golangv1
    service: goserv1
