yamls/2-deploy-fe-v1-svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python3-fe
  labels:
    type: flask
    service: pythonfe
    app: flask
    version: pythonfe1
spec:
  replicas: 3
  selector:
    matchLabels:
      type: flask
      service: pythonfe
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        type: flask
        service: pythonfe
        app: flask
        version: pythonfe1
    spec:
      containers:
      - name: flask
        image: papudatta/istio-pythonfe:latest
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8081
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8081
          initialDelaySeconds: 5
          periodSeconds: 10

---

apiVersion: v1
kind: Service
metadata:
  name: pythonfe
spec:
  type: NodePort
  ports:
  - port: 8081
  externalTrafficPolicy: Local
  selector:
    type: flask
    service: pythonfe

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: goserv1
  labels:
    app: goserv
    version: goserv1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: goserv
      version: goserv1
  template:
    metadata:
      labels:
        app: goserv
        version: goserv1
    spec:
      containers:
      - name: goserv1
        image: papudatta/istio-goserv1:7
        readinessProbe:
          httpGet:
            path: /healthz
            port: 9091
          initialDelaySeconds: 5
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /healthz
            port: 9091
          initialDelaySeconds: 5
          periodSeconds: 5

---

apiVersion: v1
kind: Service
metadata:
  name: goserv
spec:
  ports:
  - port: 9091
  selector:
    app: goserv
