yamls/5_destination_rules.yaml
# apiVersion: networking.istio.io/v1alpha3
# kind: DestinationRule
# metadata:
#   name: pythonfe
# spec:
#   host: pythonfe
#   trafficPolicy:
#     tls:
#       mode: ISTIO_MUTUAL
#   subsets:
#   - name: v1
#     labels:
#       service: pythonfe
# ---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: goserv
spec:
  host: goserv
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
  - name: v1
    labels:
      version: goserv1
  - name: v2
    labels:
      version: goserv2
  - name: v3
    labels:
      version: goserv3
