yamls/6_virtualService_goserv_80-20.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: goserv
spec:
  hosts:
    - goserv.default.svc.cluster.local
  http:
  - route:
    - destination:
        host: goserv
        subset: v1
      weight: 70
    - destination:
        host: goserv
        subset: v2
      weight: 30
